# windwatcher

./: .containerignore  .env.example  .gitignore  Cargo.toml  Containerfile
migration/src/: lib.rs  m20260102_204116_create_users_table.rs
src/: main.rs
src/adapters/: mod.rs
src/adapters/auth/: local.rs
src/adapters/auth/jwt/: service.rs
src/adapters/hash/: argon2.rs
src/adapters/http/actix/: api_error.rs  mod.rs  server.rs
src/adapters/http/actix/auth/: dto.rs  extractor.rs  handler.rs  middleware.rs  mod.rs  routes.rs
src/adapters/http/actix/user/: dto.rs  mod.rs  (+2 more)
src/adapters/persistence/postgres/: connection.rs
src/adapters/token/: jwt.rs
src/application/: mod.rs
src/application/auth/: authenticator.rs  credentials.rs  error.rs  login.rs  mod.rs
src/application/security/: error.rs  mod.rs  token.rs  token_service.rs
src/application/user/: create_user.rs  delete_user.rs  find_user.rs  mod.rs  update_user.rs
src/cli/: database.rs  http.rs  logging.rs  mod.rs
src/config/: mod.rs
src/config/database/: ports.rs
src/config/database/adapters/: cli.rs  env.rs
src/config/http/: ports.rs
src/config/http/adapters/: cli.rs  env.rs
src/config/logging/: mod.rs  ports.rs
src/config/logging/adapters/: cli.rs  env.rs
src/domain/auth/: authenticated_user.rs  mod.rs  token.rs  token_service.rs
src/domain/errors/: domain.rs  repository.rs
src/domain/user/: entity.rs  error.rs  mod.rs  password_hasher.rs  patch.rs  repository.rs  service.rs
src/domain/user/value_objects/: mod.rs  name.rs  password_hash.rs  password_plain.rs  username.rs
(+7 files in other folders)
