[package]
name = "windwatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
regex = "1.12.2"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.19.0", features = ["v7"] }

[workspace]
members = [
	"migration"
]