[package]
name = "windwatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
argon2 = "0.5.3"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.29"
regex = "1.12.2"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
utoipa = { version = "5.4.0", features = ["uuid", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.19.0", features = ["v7"] }

[workspace]
members = [
	"migration"
]
